button spacing on campare page fixed

--- a/assets/css/compare.css
+++ b/assets/css/compare.css
@@ -15,6 +15,7 @@
   display:flex;
   padding:10px;
   width:50%;
+  margin-top: 12px;
 
 }
 
